피드백 반영 1

--- a/자소서.md
+++ b/자소서.md
@@ -1,10 +1,11 @@
 ## 지원동기를 간략히 입력하여 주십시오
 ---
-귀사의 핵심 가치, 중에서도 특히 Never-ending Challenge를 실현하기 위하여 지원하였습니다. 게임 개발자, 중에서도 프로그래머가 되고자 했던 이유가 어렸을 때부터 즐겁고 재밌는 게임을 만들고 싶었지만, 기획력도 예술성도 떨어졌기에 프로그래밍 역량을 길러 한 축을 담당하고 싶어서였습니다. 하지만 개발을 배우고 나니 개발자 혼자서는 게임은 만들 수 없다는 것을 깨닫기만 했습니다. 하지만 귀사에서 저는 개발자로 들어가지만, 각 분야에서 이미 저와 같은 생각으로 이끌고 계신 분들이 있기에 저는 오로지 제가 할 수 있는 분야에 집중하여 도전할 수 있을 것입니다. 도전을 위한 준비로 프로그래밍 학술동아리에서 회원들과 여러 분야의 프로젝트를 진행하며 언어나 프레임워크에 상관없이 적용할 수 있는 범용적인 개발역량을 길렀습니다. 특히 그 중 유니티 엔진과 그를 위한 C#, 안드로이드를 활용하여 다수의 프로젝트를 성공적으로 마무리 지었습니다. 또한, 프로비스 게임즈에서 클라이언트 개발을 맡으면서 타인, 타 직군과의 협업 능력을 길렀습니다.
+귀사의 핵심 가치, 중에서도 특히 Never-ending Challenge를 실현하기 위하여 지원하였습니다. 게임 개발자가 되고자 했던 이유는 어렸을 때부터 즐겁고 재밌는 게임을 만들고 싶었고, 기획과 아트, 개발로 분야가 나뉘는것은 일찍 접했었습니다. 툴을 다루거나 공부를 하는건 괜찮아도 기획과 아트분야에서는 감각적인 부분을 많이 요구하였고, 저는 비교적 수학, 과학에 더 강세를 보여 프로그래밍 역량을 길러 개발자로서 한 축을 담당하고 싶어서였습니다. 하지만 개발을 배우고 나니 개발자 혼자서는 게임은 만들 수 없다는 것을 깨닫기만 했습니다. 하지만 귀사에서 저는 개발자로 들어가지만, 각 분야에서 이미 저와 같은 생각으로 이끌고 계신 분들이 있기에 저는 오로지 제가 할 수 있는 분야에 집중하여 도전할 수 있을 것입니다. 도전을 위한 준비로 프로그래밍 학술동아리에서 회원들과 여러 분야의 프로젝트를 진행하며 언어나 프레임워크에 상관없이 적용할 수 있는 범용적인 개발역량을 길렀습니다. 특히 그 중 유니티 엔진과 그를 위한 C#, 안드로이드를 활용하여 다수의 프로젝트를 성공적으로 마무리 지었습니다. 또한, 프로비스 게임즈에서 클라이언트 개발을 맡으면서 타인, 타 직군과의 협업 능력을 길렀습니다.
 
 ## 자신이 하고 싶은 것을 진지하게 수행했던 경험(Integrity), 무엇인가에 빠져 헌신적으로 수행했던 경험(Passion), 끊임없는 개선을 통해 타인을 감동시켰던 경험(Never-ending Challenge) 중 한 개를 선택하여 그 경험과 결과에 대해 서술하시오
 ---
-현재 일하고 있는 프로비스게임즈에서 담당했었던 업무 중 일부가 생각납니다. 시작은 내부적으로 기존의 기획만으로는 게임의 볼륨이 빈약하다는 피드백이었습니다. 추가적인 콘텐츠를 고심하던 도중 구성원들은 인테리어 꾸미기라는 콘텐츠를 고안하였고, 비교적 입사한 지 얼마 되지 않아 업무적으로 여유가 있었던 제가 주로 담당하여 제작하게 되었습니다. 처음에는 확장성을 고려하여 전역적 3차원 타일과 동적 2차원 타일들의 모음 중에서 저울질하였습니다. 전 다른 사람들이 느낌을 확인할 수 있는 간단한 프로토타입을 제작해 보여주었고, 동적 2차원 타일을 조합하여 공간을 구성하기로 하였습니다. 그리고 구성원들과 함께 소통하며 다음은 일부 사물 위에 사물을 올릴 수 있도록 중첩된 구조가 가능하게 만들어 서랍장 위에 수면등을 놓을 수 있게 만들었습니다. 그 후 생동감을 주기 위해 캐릭터를 배치했고, 역동성을 주기 위해 캐릭터들이 움직이게 하였습니다. 가장 최근에는 인테리어의 대상인 집 또한 시스템에 포함하여 마을 전체를 이용자가 마음대로 커스터마이징 할 수 있게 만들었습니다. 처음에는 타일 위에 모델을 배치하는 게 전부였지만, 9개월에 걸쳐 현재는 동물의 숲의 인테리어에 견줄 만한 모바일 게임 콘텐츠를 만들 수 있는 시스템 정도가 되었습니다. 
+[Passion]
+프로그래밍 동아리에서의 첫 프로젝트 마감 발표 전날이 생각납니다. 그때 당시 저는 다른 동아리 회원 한 명과 함께 한 게임을 공유하는 4인 네트워크 테트리스를 만들었습니다. 당시 기억으로는 목표에서 오는 소켓 프로그래밍, GUI 컨트롤과 이를 받쳐주기 위한 비동기 프로그래밍, 기본적으로 들어가는 객체지향 개념까지 한 번에 공부하면서 작업하던 중이었습니다. 코딩에 관한 지식뿐 아니라 소프트웨어 설계능력도 모자란 상태였습니다. 그래도 처음으로 여러 가지 기능이 받쳐주는 나만의 프로그램을 마무리까지 짓는다는 생각에 열심히 만들었습니다. 하지만 한 칸의 블록에 텍스처를 입히는 과정에서 문제가 발생했습니다. 지금 생각해보면 원인은 메모리에 텍스처를 불러와 한 프레임에서 사용하고 비동기에 묶여있던 데이터를 명시적으로 가비지컬렉팅 하지 않은 점이 문제였다고 생각하지만, 당시의 저는 가비지컬렉팅이 일어나지 않을 거라는 생각조차 도 못 하던 때였습니다. 그렇다고 단색으로 표현하자니 제 첫 작품으로 너무 멋이 안 살아난다고 생각했었습니다. 마감 전날까지 혹시나 실패할 때를 대비하여 단색으로 렌더링하는 버전을 하나 마무리를 짓고, 그날 저녁부터 그 버전에서 공부한 것, 잘 되었다 생각하는 부분을 모아 처음부터 재설계를 들어갔습니다. 알고리즘 문제 풀듯이 프로그램을 적어나가던 저는 그날 처음으로 설계의 중요성을 깨달았습니다. 그렇게 저는 저녁 9시부터 다음날 새벽 6시까지 앉은자리에서 새로 프로그램을 완성했습니다. 그리고 그날 성공적으로 동아리 회원들 앞에 텍스처가 입혀진 테트리스를 시연하였습니다. 지금 생각하면 어떻게 그런 생각을 했을까도 싶지만, 지금도 짜내야 할 제 몫의 코드가 있다면 밤새 마치 게임을 하듯 게임을 만들 거란 생각이 듭니다.
 
 ## 지원한 분야의 전문성과 역량을 갖추기 위해 본인이 노력했던 경험과 그 결과에 대하여 구체적으로 서술하시오
 ---
