피드백 반영 2

--- a/자소서.md
+++ b/자소서.md
@@ -1,6 +1,6 @@
 ## 지원동기를 간략히 입력하여 주십시오
 ---
-귀사의 핵심 가치, 중에서도 특히 Never-ending Challenge를 실현하기 위하여 지원하였습니다. 게임 개발자가 되고자 했던 이유는 어렸을 때부터 즐겁고 재밌는 게임을 만들고 싶었고, 기획과 아트, 개발로 분야가 나뉘는것은 일찍 접했었습니다. 툴을 다루거나 공부를 하는건 괜찮아도 기획과 아트분야에서는 감각적인 부분을 많이 요구하였고, 저는 비교적 수학, 과학에 더 강세를 보여 프로그래밍 역량을 길러 개발자로서 한 축을 담당하고 싶어서였습니다. 하지만 개발을 배우고 나니 개발자 혼자서는 게임은 만들 수 없다는 것을 깨닫기만 했습니다. 하지만 귀사에서 저는 개발자로 들어가지만, 각 분야에서 이미 저와 같은 생각으로 이끌고 계신 분들이 있기에 저는 오로지 제가 할 수 있는 분야에 집중하여 도전할 수 있을 것입니다. 도전을 위한 준비로 프로그래밍 학술동아리에서 회원들과 여러 분야의 프로젝트를 진행하며 언어나 프레임워크에 상관없이 적용할 수 있는 범용적인 개발역량을 길렀습니다. 특히 그 중 유니티 엔진과 그를 위한 C#, 안드로이드를 활용하여 다수의 프로젝트를 성공적으로 마무리 지었습니다. 또한, 프로비스 게임즈에서 클라이언트 개발을 맡으면서 타인, 타 직군과의 협업 능력을 길렀습니다.
+귀사의 핵심 가치, 중에서도 특히 Never-ending Challenge를 실현하기 위하여 지원하였습니다. 게임 개발자가 되고자 했던 이유는 어렸을 때부터 즐겁고 재밌는 게임을 만들고 싶었고, 중고등학교때 게임 개발이 기획과 아트, 개발로 분야가 나뉜다는 것은 일찍 접했습니다. 기획과 아트분야로는 툴도 익혀 보고 공부도 해보았지만 감각적인 부분을 많이 요구하였고, 저는 비교적 수학적인 부분, 기술적인 부분에 더 강세를 보여 프로그래밍 역량을 길러 개발자로서 나아가기로 정했습니다. 하지만 개발을 배우고 나니 개발자 혼자서는 게임은 만들 수 없다는 것을 깨닫기만 했습니다. 하지만 귀사에서 저는 개발자로 들어가지만, 각 분야에서 이미 저와 같은 생각으로 이끌고 계신 분들이 있기에 저는 오로지 제가 할 수 있는 분야에 집중하여 도전할 수 있을 것입니다. 도전을 위한 준비로 프로그래밍 학술동아리에서 회원들과 여러 분야의 프로젝트를 진행하며 언어나 프레임워크에 상관없이 적용할 수 있는 범용적인 개발역량을 길렀습니다. 특히 그 중 유니티 엔진과 그를 위한 C#, 안드로이드를 활용하여 다수의 프로젝트를 성공적으로 마무리 지었습니다. 또한, 프로비스 게임즈에서 클라이언트 개발을 맡으면서 타인, 타 직군과의 협업 능력을 길렀습니다.
 
 ## 자신이 하고 싶은 것을 진지하게 수행했던 경험(Integrity), 무엇인가에 빠져 헌신적으로 수행했던 경험(Passion), 끊임없는 개선을 통해 타인을 감동시켰던 경험(Never-ending Challenge) 중 한 개를 선택하여 그 경험과 결과에 대해 서술하시오
 ---
@@ -13,5 +13,5 @@
 
 ## 같은 프로젝트를 여러 사람이 같이 할 경우, 개발할 때 (코딩할 때) 가장 중요 하다고 생각하는 부분을 서술하시오 (본인의 개발 철학도 좋음) 
 ---
-여러 사람이 같은 프로젝트를 맡아 작업하게 될 경우, 프로젝트 구성원 간의 의사소통이 가장 중요하다고 생각합니다. 모두가 같은 방향을 나아가기 위해선 모두가 같은 생각을 가지고 있다는 것을 확인하여야 합니다. 그러기 위해선 무엇보다 의사소통 능력이 중요하다 생각합니다. 의사소통이 원할하지 않은 상태로 설계된 시스템은 통일성이 없어 서로 다른 사람이 맡은 부분에 대해 작업이 들어가게 되면 어떤 형태로 되어있는지 파악하는것부터 들어가야 하며, 최악의 경우에는 재설계를 해야될 수도 있습니다. 단기적으로는 작업프로세스의 저하를 일으키고 더 나아가서는 프로젝트 전체의 안정성이나 지속성도 떨어뜨리게 됩니다.
+여러 사람이 같은 프로젝트를 맡아 작업하게 될 경우, 프로젝트 구성원 간의 의사소통이 가장 중요하다고 생각합니다. 모두가 같은 방향을 나아가기 위해선 모두가 같은 생각을 가지고 있다는 것을 확인하여야 합니다. 의사소통이 원할하지 않은 상태로 설계된 시스템은 통일성이 없어 서로 다른 사람이 맡은 부분에 대해 작업이 들어가게 되면 어떤 형태로 되어있는지 파악하는것부터 들어가야 하며, 최악의 경우에는 재설계를 해야될 수도 있습니다. 단기적으로는 작업프로세스의 저하를 일으키고 더 나아가서는 프로젝트 전체의 안정성이나 지속성도 떨어뜨리게 됩니다.
 이전 프로비스 게임즈에 처음 들어왔을때 특히 의사소통의 중요성을 느꼈습니다. 당시 제가 받았던 업무 중 일부는 제가 있기전 이직한 사람의 작업물이 있었습니다. 하지만 해당 작업물에 대하여 어떤 레퍼런스나 인수인계가 없었고, 해당 부분의 코드밖에 없었습니다. 결국 저는 해당 코드를 거꾸로 타고가면서 해당부분을 도려내 확장을 위해 재설계해야 했었습니다. 해당 부분은 전 작업자와 같이 일했었던 동료에게도 설명된 것이 없었기에 일어났습니다. 이 일이 있기 전에는 의사소통이 원할하지 않았어도 혼자 힘으로 어떻게 할 만한 크기의 프로젝트 뿐이였지만, 이 일을 겪으면서 저는 의사소통의 중요성에 대해 통감했습니다. 서로의 코드를 획일성 보기 위한 컨벤션과 시간적으로 동시에 있지 않는 사람 간의 의사소통인 문서화 등 무엇을 만드는지를 제외한 대부분의 개발자에게 들어가는 제약 역시 의사소통을 위해 나타났다고 생각합니다.
