--- a/자소서.md
+++ b/자소서.md
@@ -1,17 +1,17 @@
 ## 지원동기를 간략히 입력하여 주십시오
 ---
-귀사의 핵심 가치, 중에서도 특히 Never-ending Challenge를 실현하기 위하여 지원하였습니다. 게임 개발자가 되고자 했던 이유는 어렸을 때부터 즐겁고 재밌는 게임을 만들고 싶었고, 중고등학교때 게임 개발이 기획과 아트, 개발로 분야가 나뉜다는 것은 일찍 접했습니다. 기획과 아트분야로는 툴도 익혀 보고 공부도 해보았지만 감각적인 부분을 많이 요구하였고, 저는 비교적 수학적인 부분, 기술적인 부분에 더 강세를 보여 프로그래밍 역량을 길러 개발자로서 나아가기로 정했습니다. 하지만 개발을 배우고 나니 개발자 혼자서는 게임은 만들 수 없다는 것을 깨닫기만 했습니다. 하지만 귀사에서 저는 개발자로 들어가지만, 각 분야에서 이미 저와 같은 생각으로 이끌고 계신 분들이 있기에 저는 오로지 제가 할 수 있는 분야에 집중하여 도전할 수 있을 것입니다. 도전을 위한 준비로 프로그래밍 학술동아리에서 회원들과 여러 분야의 프로젝트를 진행하며 언어나 프레임워크에 상관없이 적용할 수 있는 범용적인 개발역량을 길렀습니다. 특히 그 중 유니티 엔진과 그를 위한 C#, 안드로이드를 활용하여 다수의 프로젝트를 성공적으로 마무리 지었습니다. 또한, 프로비스 게임즈에서 클라이언트 개발을 맡으면서 타인, 타 직군과의 협업 능력을 길렀습니다.
+귀사의 핵심 가치, 중에서도 특히 Never-ending Challenge를 실현하기 위하여 지원하였습니다. 게임 개발자가 되고자 했던 이유는 어렸을 때부터 즐겁고 재밌는 게임을 만들고 싶었고, 중고등학교 때 게임 개발이 기획과 아트, 개발로 분야가 나뉜다는 것은 일찍 접했습니다. 기획과 아트분야로는 툴도 익혀 보고 공부도 해보았지만, 감각적인 부분을 많이 요구하였고, 저는 비교적 수학적인 부분, 기술적인 부분에 더 강세를 보여 프로그래밍 역량을 길러 개발자로서 나아가기로 정했습니다. 하지만 개발을 배우고 나니 개발자 혼자서는 게임은 만들 수 없다는 것을 깨닫기만 했습니다. 하지만 귀사에서 저는 개발자로 들어가지만, 각 분야에서 이미 저와 같은 생각으로 이끌고 계신 분들이 있기에 저는 오로지 제가 할 수 있는 분야에 집중하여 도전할 수 있을 것입니다. 도전을 위한 준비로 프로그래밍 학술동아리에서 회원들과 여러 분야의 프로젝트를 진행하며 언어나 프레임워크에 상관없이 적용할 수 있는 범용적인 개발역량을 길렀습니다. 특히 그 중 유니티 엔진과 그를 위한 C#, 안드로이드를 활용하여 다수의 프로젝트를 성공적으로 마무리 지었습니다. 또한, 프로비스 게임즈에서 클라이언트 개발을 맡으면서 타인, 타 직군과의 협업 능력을 길렀습니다.
 
 ## 자신이 하고 싶은 것을 진지하게 수행했던 경험(Integrity), 무엇인가에 빠져 헌신적으로 수행했던 경험(Passion), 끊임없는 개선을 통해 타인을 감동시켰던 경험(Never-ending Challenge) 중 한 개를 선택하여 그 경험과 결과에 대해 서술하시오
 ---
 [Passion]
-프로그래밍 동아리에서의 첫 프로젝트 마감 발표 전날이 생각납니다. 그때 당시 저는 다른 동아리 회원 한 명과 함께 한 게임을 공유하는 4인 네트워크 테트리스를 만들었습니다. 당시 기억으로는 목표에서 오는 소켓 프로그래밍, GUI 컨트롤과 이를 받쳐주기 위한 비동기 프로그래밍, 기본적으로 들어가는 객체지향 개념까지 한 번에 공부하면서 작업하던 중이었습니다. 코딩에 관한 지식뿐 아니라 소프트웨어 설계능력도 모자란 상태였습니다. 그래도 처음으로 여러 가지 기능이 받쳐주는 나만의 프로그램을 마무리까지 짓는다는 생각에 열심히 만들었습니다. 하지만 한 칸의 블록에 텍스처를 입히는 과정에서 문제가 발생했습니다. 지금 생각해보면 원인은 메모리에 텍스처를 불러와 한 프레임에서 사용하고 비동기에 묶여있던 데이터를 명시적으로 가비지컬렉팅 하지 않은 점이 문제였다고 생각하지만, 당시의 저는 가비지컬렉팅이 일어나지 않을 거라는 생각조차 도 못 하던 때였습니다. 그렇다고 단색으로 표현하자니 제 첫 작품으로 너무 멋이 안 살아난다고 생각했었습니다. 마감 전날까지 혹시나 실패할 때를 대비하여 단색으로 렌더링하는 버전을 하나 마무리를 짓고, 그날 저녁부터 그 버전에서 공부한 것, 잘 되었다 생각하는 부분을 모아 처음부터 재설계를 들어갔습니다. 알고리즘 문제 풀듯이 프로그램을 적어나가던 저는 그날 처음으로 설계의 중요성을 깨달았습니다. 그렇게 저는 저녁 9시부터 다음날 새벽 6시까지 앉은자리에서 새로 프로그램을 완성했습니다. 그리고 그날 성공적으로 동아리 회원들 앞에 텍스처가 입혀진 테트리스를 시연하였습니다. 지금 생각하면 어떻게 그런 생각을 했을까도 싶지만, 지금도 짜내야 할 제 몫의 코드가 있다면 밤새 마치 게임을 하듯 게임을 만들 거란 생각이 듭니다.
+프로그래밍 동아리에서의 첫 프로젝트 마감 발표 전날이 생각납니다. 그때 당시 저는 다른 동아리 회원 한 명과 함께 한 게임을 공유하는 4인 네트워크 테트리스를 만들었습니다. 당시 기억으로는 목표에서 오는 소켓 프로그래밍, GUI 컨트롤과 이를 받쳐주기 위한 비동기 프로그래밍, 기본적으로 들어가는 객체지향 개념까지 한 번에 공부하면서 작업하던 중이었습니다. 코딩에 관한 지식뿐 아니라 소프트웨어 설계능력도 모자란 상태였습니다. 그래도 처음으로 여러 가지 기능이 받쳐주는 나만의 프로그램을 마무리까지 짓는다는 생각에 열심히 만들었습니다. 하지만 한 칸의 블록에 텍스처를 입히는 과정에서 문제가 발생했습니다. 지금 생각해보면 원인은 메모리에 텍스처를 불러와 한 프레임에서 사용하고 비동기에 묶여있던 데이터를 명시적으로 가비지컬렉팅 하지 않은 점이 문제였다고 생각하지만, 당시의 저는 가비지컬렉팅이 일어나지 않을 거라는 생각조차도 못 하던 때였습니다. 그렇다고 단색으로 표현하자니 제 첫 작품으로 너무 멋이 안 살아난다고 생각했었습니다. 마감 전날까지 혹시나 실패할 때를 대비하여 단색으로 렌더링하는 버전을 하나 마무리를 짓고, 그날 저녁부터 그 버전에서 공부한 것, 잘 되었다 생각하는 부분을 모아 처음부터 재설계를 들어갔습니다. 알고리즘 문제 풀듯이 프로그램을 적어나가던 저는 그날 처음으로 설계의 중요성을 깨달았습니다. 그렇게 저는 저녁 9시부터 다음날 새벽 6시까지 앉은자리에서 새로 프로그램을 완성했습니다. 그리고 그날 성공적으로 동아리 회원들 앞에 텍스처가 입혀진 테트리스를 시연하였습니다. 지금 생각하면 어떻게 그런 생각을 했을까도 싶지만, 지금도 짜내야 할 제 몫의 코드가 있다면 밤새 마치 게임을 하듯 게임을 만들 거란 생각이 듭니다.
 
 ## 지원한 분야의 전문성과 역량을 갖추기 위해 본인이 노력했던 경험과 그 결과에 대하여 구체적으로 서술하시오
 ---
-대학교 입학 후 프로그래밍 학술동아리에서 선배의 조언을 받아 레퍼런스 문서를 읽는 법에 대해 공부했던 기억이 납니다. 막연하게 게임 개발자가 되겠다. 생각하고 어떤 것부터 공부해야 될지 몰랐던 저는 1학년 때 게임 이전에 프로그래밍 자체부터 익혀야 하겠다는 생각에 남들 하듯 C언어 책만 보며 어떻게 공부해야 할지 물어보고 다녔었습니다. 그때 동아리 선배 중 한 분이 레퍼런스 문서라는 것에 대해 넌지시 가르쳐 주셨었고 오라클 레퍼런스문서를 접하였습니다. 처음엔 막대한 양의 문서에 압도되었지만, 사전과 다를 바 없었습니다. 필요한 부분을 빠르게 배우는 걸 연습하기 위해 처음엔 콘솔 지뢰 찾기를, 그다음은 Swing과 멀티 스레딩을 이용해 GUI를 가진 같은 게임을 만들었습니다. 그쯤 되니 자신감이 붙기 시작했습니다. 그 후 동아리 활동, 대외활동이나 취미생활 등으로 안드로이드, 유니티 엔진이나 파이썬같은 여러 분야를 접해보면서 무슨 언어로든, 무슨 기술로든 목표하는 구현이 가능하다는 것과 해당 부분만이 갖추고 있는 특별한 기능에 대한 문서만 잘 있다면, 도전하는 데 있어 거부감이 들지 않게 되었습니다. 그렇게 저는 배움에서 응용을 빠르게 들어갈 줄 아는 패스트 러너형 인재가 되었습니다.
+대학교 입학 후 프로그래밍 학술동아리에서 선배의 조언을 받아 레퍼런스 문서를 읽는 법에 관해 공부했던 기억이 납니다. 막연하게 게임 개발자가 되겠다. 생각하고 어떤 것부터 공부해야 할지 몰랐던 저는 1학년 때 게임 이전에 프로그래밍 자체부터 익혀야 하겠다는 생각에 남들 하듯 C언어 책만 보며 어떻게 공부해야 할지 물어보고 다녔었습니다. 그때 동아리 선배 중 한 분이 레퍼런스 문서라는 것에 대해 넌지시 가르쳐 주셨었고 오라클 레퍼런스문서를 접하였습니다. 처음엔 막대한 양의 문서에 압도되었지만, 사전과 다를 바 없었습니다. 필요한 부분을 빠르게 배우는 걸 연습하기 위해 처음엔 콘솔 지뢰 찾기를, 그다음은 Swing과 멀티 스레딩을 이용해 GUI를 가진 같은 게임을 만들었습니다. 그쯤 되니 자신감이 붙기 시작했습니다. 그 후 동아리 활동, 대외활동이나 취미생활 등으로 안드로이드, 유니티 엔진이나 파이썬같은 여러 분야를 접해보면서 무슨 언어로든, 무슨 기술로든 목표하는 구현이 가능하다는 것과 해당 부분만이 갖추고 있는 특별한 기능에 대한 문서만 잘 있다면, 도전하는 데 있어 거부감이 들지 않게 되었습니다. 그렇게 저는 배움에서 응용을 빠르게 들어갈 줄 아는 패스트 러너형 인재가 되었습니다.
 
 ## 같은 프로젝트를 여러 사람이 같이 할 경우, 개발할 때 (코딩할 때) 가장 중요 하다고 생각하는 부분을 서술하시오 (본인의 개발 철학도 좋음) 
 ---
-여러 사람이 같은 프로젝트를 맡아 작업하게 될 경우, 프로젝트 구성원 간의 의사소통이 가장 중요하다고 생각합니다. 모두가 같은 방향을 나아가기 위해선 모두가 같은 생각을 가지고 있다는 것을 확인하여야 합니다. 의사소통이 원할하지 않은 상태로 설계된 시스템은 통일성이 없어 서로 다른 사람이 맡은 부분에 대해 작업이 들어가게 되면 어떤 형태로 되어있는지 파악하는것부터 들어가야 하며, 최악의 경우에는 재설계를 해야될 수도 있습니다. 단기적으로는 작업프로세스의 저하를 일으키고 더 나아가서는 프로젝트 전체의 안정성이나 지속성도 떨어뜨리게 됩니다.
-이전 프로비스 게임즈에 처음 들어왔을때 특히 의사소통의 중요성을 느꼈습니다. 당시 제가 받았던 업무 중 일부는 제가 있기전 이직한 사람의 작업물이 있었습니다. 하지만 해당 작업물에 대하여 어떤 레퍼런스나 인수인계가 없었고, 해당 부분의 코드밖에 없었습니다. 결국 저는 해당 코드를 거꾸로 타고가면서 해당부분을 도려내 확장을 위해 재설계해야 했었습니다. 해당 부분은 전 작업자와 같이 일했었던 동료에게도 설명된 것이 없었기에 일어났습니다. 이 일이 있기 전에는 의사소통이 원할하지 않았어도 혼자 힘으로 어떻게 할 만한 크기의 프로젝트 뿐이였지만, 이 일을 겪으면서 저는 의사소통의 중요성에 대해 통감했습니다. 서로의 코드를 획일성 보기 위한 컨벤션과 시간적으로 동시에 있지 않는 사람 간의 의사소통인 문서화 등 무엇을 만드는지를 제외한 대부분의 개발자에게 들어가는 제약 역시 의사소통을 위해 나타났다고 생각합니다.
+여러 사람이 같은 프로젝트를 맡아 작업하게 될 경우, 프로젝트 구성원 간의 의사소통이 가장 중요하다고 생각합니다. 모두가 같은 방향을 나아가기 위해선 모두가 같은 생각을 하고 있다는 것을 확인하여야 합니다. 의사소통이 원활하지 않은 상태로 설계된 시스템은 통일성이 없어 서로 다른 사람이 맡은 부분에 대해 작업이 들어가게 되면 어떤 형태로 되어있는지 파악하는 것부터 들어가야 하며, 최악의 경우에는 재설계를 해야 될 수도 있습니다. 단기적으로는 작업프로세스의 저하를 일으키고 더 나아가서는 프로젝트 전체의 안정성이나 지속성도 떨어뜨리게 됩니다.
+이전 프로비스 게임즈에 처음 들어왔을 때 특히 의사소통의 중요성을 느꼈습니다. 당시 제가 받았던 업무 중 일부는 제가 있기 전 이직한 사람의 작업물이 있었습니다. 하지만 해당 작업물에 대하여 어떤 레퍼런스나 인수인계가 없었고, 해당 부분의 코드밖에 없었습니다. 결국, 저는 해당 코드를 거꾸로 타고 가면서 해당 부분을 도려내 확장을 위해 재설계해야 했습니다. 해당 부분은 전 작업자와 같이 일했었던 동료에게도 설명된 것이 없었기에 일어났습니다. 이 일이 있기 전에는 의사소통이 원활하지 않았어도 혼자 힘으로 어떻게 할 만한 크기의 프로젝트 뿐이었지만, 이 일을 겪으면서 저는 의사소통의 중요성에 대해 통감했습니다. 서로의 코드를 획일성 보기 위한 컨벤션과 시간상으로 동시에 있지 않은 사람 간의 의사소통인 문서화 등 무엇을 만드는지를 제외한 대부분 개발자에게 들어가는 제약 역시 의사소통을 위해 나타났다고 생각합니다.
